After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685121 - error: previous declaration of 'reboot'
error: previous declaration of 'reboot'
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
3.6.x
Other OpenBSD
: Normal major
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-30 08:26 UTC by Antoine Jacoutot
Modified: 2012-09-30 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
prefix generic names with gs_ (2.98 KB, patch)
2012-09-30 08:26 UTC, Antoine Jacoutot
reviewed Details | Review
prefix generic names with opt_ (2.99 KB, patch)
2012-09-30 15:58 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2012-09-30 08:26:21 UTC
Created attachment 225408 [details] [review]
prefix generic names with gs_

Hi.

Some gboolean have too generic names which makes the build fails on OpenBSD.
e.g.
gnome-session-quit.c:48: error: 'reboot' redeclared as different kind of symbol
/usr/include/unistd.h:480: error: previous declaration of 'reboot' was here

The attached patch proposes to prefix all the logout, reboot... with 'gs_'.
Would something like this be alright to push?

Thank you.
Comment 1 Colin Walters 2012-09-30 15:41:56 UTC
Review of attachment 225408 [details] [review]:

I prefer prefixing all options with "opt_".
Comment 2 Antoine Jacoutot 2012-09-30 15:58:52 UTC
Created attachment 225431 [details] [review]
prefix generic names with opt_

Sure thing.
Is that what you were expecting?
Comment 3 Colin Walters 2012-09-30 16:08:56 UTC
Review of attachment 225431 [details] [review]:

Looks nicer, yes. 

Please do add a link to this bug in the commit message, per
https://live.gnome.org/GnomeLove/SubmittingPatches
Comment 4 Antoine Jacoutot 2012-09-30 16:55:53 UTC
All done. Thank you Colin.