rename some generic names to prevent redeclaration on some OS

https://bugzilla.gnome.org/show_bug.cgi?id=685121
(cherry picked from commit 765827a72d276622fb41ce053582c730c71c48b4)